# Prato-Cheio

./: .gitignore  README.md  pyproject.toml
relatorio/: relatorio.tex
scripts/: download_dataset.py  predict.py  train.py
